--- a/style/landing-page-style.css
+++ b/style/landing-page-style.css
@@ -4,7 +4,6 @@
 margin:0;
 padding: 0;
 box-sizing: border-box;
-font-family:Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -80,12 +79,13 @@ section #text{
     font-size: x-small;
 }
 
-.sec{
+.welcome{
+    font-size: 3.5em ;
+    color: #cfb8aa;
+    font-family: 'rancho',cursive;
     position: relative;
-    padding: 100px;
     background-color: #2d1f01;
-    font-size: 1em ;
-    color: #fff;
+    font-size: 2em ;
     width:100%;
     height: 145vh;
     display: flex;
@@ -93,13 +93,25 @@ section #text{
     flex-direction: column;
 }
 
-.sec #welcome{
-    font-size: 3.5em ;
-    color: #ffcdae;
-    font-family: 'rancho',cursive;
-
+.story{
+    font-size:smaller;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
+.footer{
+    margin-top: 0px;
+    padding-top: 0px;
+    display: flex;
+    justify-content: space-between;
+
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #2d1f01;
+    color: #cfb8aa;
+    font-weight: 700;
+    
+}
 
 canvas {
     display: block;
@@ -111,6 +123,4 @@ canvas {
     max-width: 100%;
     max-height: 50vw;
   }
-  
- 
 
